--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,10 @@ NODE_ENV=dev
 
 SERVER_PROTOCOL=http
 SERVER_PORT=8088
+
+# TWITTER
+
+TWITTER_CONSUMER_KEY=8088
+TWITTER_CONSUMER_SECRET=8088
+TWITTER_ACCESS_TOKEN_KEY=8088
+TWITTER_ACCESS_TOKEN_SECRET=8088
