--- a/server/package.json
+++ b/server/package.json
@@ -23,19 +23,19 @@
   "author": "Maxim Rozhaev",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.6.0",
+    "compression": "^1.7.1",
+    "dotenv": "^4.0.0",
     "express": "^4.16.0",
     "express-flash": "0.0.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
-    "async": "^2.6.0",
-    "compression": "^1.7.1",
-    "dotenv": "^4.0.0",
+    "fs-extra": "5.0.0",
     "nodemailer": "^4.4.1",
+    "nodemailer-sendgrid-transport": "0.2.0",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "cors": "2.8.4",
-    "fs-extra": "5.0.0",
-    "nodemailer-sendgrid-transport": "0.2.0",
+    "twitter": "^1.7.1",
     "winston": "^2.4.0"
   },
   "devDependencies": {
