--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest",
     "test-cov": "jest --coverage",
-    "start": "concurrently \"npm run dev\" \"cd server && npm run serve\"",
+    "start": "concurrently \"npm run dev\" \"cd server && npm run start\"",
     "dev": "webpack-dev-server --debug --hot --devtool eval-source-map --output-pathinfo --watch --colors --inline --content-base public --port 8080",
     "build": "webpack --config webpack.config.prod.js -p",
     "analyze-bundle": "webpack --config webpack-analyze.config.prod.js -p"
