--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,11 @@
   "author": "Maxim Rozhaev",
   "license": "ISC",
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/cors": "^2.8.4",
     "async": "^2.6.0",
     "compression": "^1.7.1",
+    "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.0",
     "express-flash": "0.0.2",
